Input on First Page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,6 @@ body,
 :root {
     height: 100%;
     width: 100%;
-    background: #292524;
-    /* bg-stone-800 */
+    background: #27272a;
+    /* bg-zinc-800 */
 }
